@@ -1,3 +1,6 @@
+2007-05-01 TADA Tadashi <sho@spc.gr.jp>
+	* whatsnew-list.rb: add label elements in update form.
+
 2007-02-17 TADA Tadashi <sho@spc.gr.jp>
 	* blog-category.rb: move help messages to Wiki.
 
